fetch general date in specified date interval and location radius.
